--- a/style.css
+++ b/style.css
@@ -1,16 +1,19 @@
-.menu {    
-    background-color: white;
-    width: 100%;
-    position: fixed;
-    height: 5%;
+*{
+  border:0;
 }
 
+.menu{
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: white;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
 }
 
 li {
