--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+/* all  */
 body{
     margin: 0;
     padding: 0;
 }
+.kanan{
+     float:right;
+ }
+.kiri{
+  float: left;
+}
+.active {
+  color: #2196F3;
+}
 
-
+/* navbar  */
 nav{
     margin: 0px;
     top: 0;
@@ -12,14 +22,7 @@ nav{
 }
 nav ul li {
     float:left;
-
 }
-
-.kanan{
-     float:right;
-
- }
-
 nav ul {
     list-style-type: none;
     margin:0;
@@ -28,10 +31,7 @@ nav ul {
     background-color: #fff;
     box-shadow: 0 4px 7px rgba(0,0,0,0.5);
   }
-nav li input{
-      margin:25px 16px;
-  }
-nav li button{
+nav li button, nav li input{
       margin:25px 16px;
   }
 nav li a {
@@ -42,16 +42,43 @@ nav li a {
     text-decoration: none;
     font-weight: bold;
   }
-
 nav li a:hover:not(.active) {
     color: #000;
   }
 
-  color: #2196F3;
-  .active {
-  }
+
 nav ul li a img.logo{
       float:left;
       width: 55px;
-      margin-top:-10px;
+      margin-top: -12.5px;
     }
+
+    @media screen and (max-width: 600px) {
+      .topnav a:not(:first-child) {display: none;}
+      .topnav a.icon {
+        float: le;
+        display: block;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      .topnav.responsive {position: relative;}
+      .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+    }
+
+/* content  */
+
+
+
+
+
+
+
+
+/* sidebar  */
+
+/* header  */
