--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ nav ul li {
     float: left;
 }
 nav ul {
+  z-index: 2;
     list-style-type: none;
     margin:0;
     overflow: hidden;
@@ -53,10 +54,12 @@ nav ul li a img.logo{
       margin-top: -12.5px;
     }
 
+
+
 .icon{
-  display: none;x
+  display: none;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 760px) {
       .topnav li .respon{display: none;}
       .topnav a.icon {
         float: left;
@@ -64,14 +67,21 @@ nav ul li a img.logo{
       }
     }
 
-@media screen and (max-width: 600px) {
-      .topnav.responsive {position: relative;}
-      .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-      }
-    }
+/* interaksi bar  */
+      div.clear {
+          clear: both;
+        }
+        div.bar {
+          text-align: center;
+        }
+        div.bar a{
+          padding:4px 0;
+          display: block;
+          color: #595959;
+          text-decoration: none;
+          font-weight: bold;
+        }
+
 
 /* content  */
 
