--- a/style.css
+++ b/style.css
@@ -85,18 +85,13 @@ nav #find input{
   display: none;
 }
 
-@media screen and (min-width: 920px){
-
-    div#find input, div#bar a{
-      display: none;
-    }
-    }
-
 @media screen and (max-width: 920px) {
       .topnav li .respon{display: none;}
       .topnav a.icon {
         float: left;
         display: block;
+        padding-right: 20px;
+        padding-left:  0;
       }
     }
 
@@ -117,6 +112,11 @@ nav #find input{
           text-decoration: none;
           font-weight: bold;
         }
+@media screen and (min-width: 920px){
+        div#find input, div#bar a{
+              display: none;
+        }
+    }
 
 /* content  */
 
