--- a/style.css
+++ b/style.css
@@ -86,12 +86,17 @@ nav ul li a img.logo{
 
 /* content  */
 
+.main-kiri{
+  width: 70.5%;
+  border: 2px solid black;
+  float: left;
+}
 
-
-
-
-
-
+.sidebar{
+  width: 24.5%;
+  border: 2px solid blue;
+  float: right;
+}
 
 /* sidebar  */
 
