--- a/style.css
+++ b/style.css
@@ -247,3 +247,12 @@ footer div a, .footer.masuk div a,.footer.daftar div a {
 footer div p, .footer.masuk div p,.footer.daftar div p {
   margin-top: 10px;
 }
+@media screen and (max-width: 400px) {
+  footer div a, .footer.masuk div a,.footer.daftar div a {
+    text-decoration: none;
+    margin: 10px;
+    padding: 0;
+    display: block;
+    color: #7F7F7F;
+  }
+}
