--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
 }
 body{
     background-image: url("asset/background.png");
@@ -125,17 +126,35 @@ nav #find input{
 /* content  */
 .konten{
   margin: 100px 40px 40px 40px;
+  /* border: 2px solid gold; */
+}
+
+.atas{
+  
+}
+
+.atas-kiri{
+  display: inline-block;
+  text-align: left;
+}
+
+.atas-kanan{
+  display: inline-block;
+  float: right;
 }
 
 .main-kiri{
   width: 71.5%;
   /* border: 2px solid black; */
   float: left;
-  padding: 10px;
+  margin: 0;
+  padding: 0px;
   float: left;
 }
 
 .isi{
+  box-sizing: border-box;
+  padding: 20px;
   width: 100%;
   background-color:#fff;
   /* border: 2px solid blue; */
@@ -143,14 +162,38 @@ nav #find input{
   /* height: 40%; */
 }
 
+
 .cover1{
   width: 25%;
   margin: 10px 10px 10px 0;
-  /* float:left; */
+  display: inline-block;
+}
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+  height: 300px;
+}
+.row {
+  padding: auto 0;
+  height: 100%;
+  margin: 0;
 }
 
-.cover2{
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
 
+.card a img{
+  width: 100%;
 }
 
 /* sidebar  */
@@ -159,7 +202,7 @@ nav #find input{
   width: 24.5%;
   /* border: 2px solid blue; */
   float: right;
-  padding: 10px;
+
 }
 
 .kanan1{
@@ -178,9 +221,7 @@ nav #find input{
   color: #2095F2;
 }
 
-.kanan2{
-  /* border: 2px solid palevioletred; */
-}
+
 
 
 /* masuk dan daftar*/
@@ -227,6 +268,7 @@ footer{
   left: 0;
   bottom: 0;
   margin-bottom: 0;
+  padding: 20px 0;
 }
 .footer.masuk, .footer.daftar{
   position: fixed;
@@ -235,7 +277,7 @@ footer{
   width: 100%;
   background-color: rgba(255,255,255,0.8);
   text-align: center;
-  padding: 20px 0;
+
 }
 
 footer div a, .footer.masuk div a,.footer.daftar div a {
