--- a/css/style.css
+++ b/css/style.css
@@ -134,10 +134,10 @@ footer{
   left: 0;
   bottom: 0;
   margin-bottom: 0;
-  padding: 20px 0;
+  padding: 20px 0 ;
   box-shadow: 0 -4px 7px rgba(0,0,0,0.5)
 }
-.footer.masuk, .footer.daftar{
+.footer.masuk, .footer.daftar, .footer.tentangKami{
   position: fixed;
   left: 0;
   bottom: 0;
@@ -145,16 +145,18 @@ footer{
   background-color: rgba(255,255,255,0.8);
   text-align: center;
   padding: 20px 0;
+  box-shadow: 0 -4px 7px rgba(0,0,0,0.5)
 }
 
-footer div a, .footer.masuk div a,.footer.daftar div a {
+footer div a, .footer.masuk div a,.footer.daftar div a, .footer.tentangKami div a {
   text-decoration: none;
   margin: 20px;
   padding: 10px 0px;
   display: inline;
   color: #7F7F7F;
 }
-footer div p, .footer.masuk div p,.footer.daftar div p {
+footer div p, .footer.masuk div p,.footer.daftar div p,  .footer.tentangKami div p{
+  text-align: center;
   margin-top: 10px;
     color: #7F7F7F;
 }
