--- a/css/style.css
+++ b/css/style.css
@@ -128,44 +128,58 @@ nav #find input{
 
 /* footer  */
 footer{
+  position: absolute;
   background-color: rgba(255,255,255,0.8);
   width: 100%;
   text-align: center;
   left: 0;
   bottom: 0;
-  margin-bottom: 0;
-  padding: 20px 0 ;
+  margin:0;
+  padding: 10px 0 ;
   box-shadow: 0 -4px 7px rgba(0,0,0,0.5)
 }
-.footer.masuk, .footer.daftar, .footer.tentangKami{
+.footer.masuk, .footer.daftar{
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
   background-color: rgba(255,255,255,0.8);
   text-align: center;
-  padding: 20px 0;
   box-shadow: 0 -4px 7px rgba(0,0,0,0.5)
 }
 
-footer div a, .footer.masuk div a,.footer.daftar div a, .footer.tentangKami div a {
-  text-decoration: none;
-  margin: 20px;
-  padding: 10px 0px;
-  display: inline;
-  color: #7F7F7F;
-}
-footer div p, .footer.masuk div p,.footer.daftar div p,  .footer.tentangKami div p{
-  text-align: center;
-  margin-top: 10px;
+@media screen and (min-width: 400px) {
+  footer div a, .footer.masuk div a,.footer.daftar div a{
+    text-decoration: none;
+    margin: 10px;
+    padding: 10px 0px;
+    display: inline;
     color: #7F7F7F;
+  }
+  footer div p, .footer.masuk div p,.footer.daftar div p{
+    text-align: center;
+      color: #7F7F7F;
+      margin: 10px;
+  }
+  .footer.masuk, .footer.daftar, .footer.tentangKami{
+    padding: 10px 0;
+  }
 }
 @media screen and (max-width: 400px) {
   footer div a, .footer.masuk div a,.footer.daftar div a {
     text-decoration: none;
-    margin: 10px;
+    margin: 0px;
     padding: 0;
     display: block;
     color: #7F7F7F;
+  }
+  footer div p, .footer.masuk div p,.footer.daftar div p{
+    text-align: center;
+      color: #7F7F7F;
+      margin: 0;
+      padding: 0;
+  }
+  .footer.masuk, .footer.daftar, .footer.tentangKami{
+    padding: 5px 0;
   }
 }
