--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
 .konten{
   margin: 100px 40px 40px 40px;
   display: block;
-  border: 2px solid cyan;
+  /* border: 2px solid cyan; */
 }
 
 .atas{
