--- a/css/detail.css
+++ b/css/detail.css
@@ -1,10 +1,8 @@
 .g{
     width: 100%;
-    height: 540px;
     /* border: 2px solid saddlebrown; */
     align-content: center;
     background-position: no-repeat;
-    overflow: hidden;
     position: relative;
     z-index: 1;
 }
@@ -13,13 +11,12 @@
     float: left;
     /* border: 2px solid chartreuse; */
     width: 63%;
-    height: 1000px;
 }
 
 .a{
     /* border: 2px solid red; */
     width: 100%;
-    margin: -150px 0 0 30px;
+    margin: -150px 0 0 0;
     background-color: #fff;
     box-shadow: 0 0 5px grey;
 }
@@ -78,7 +75,7 @@
     /* border: 1px solid #fff; */
     background-color: #fff;
     width: 100%;
-    margin: 30px 0 0 30px;
+    margin: 30px 0 0 0px;
     box-shadow: 0 0 5px grey;
 }
 
@@ -95,7 +92,7 @@
 .c{
     background-color: #fff;
     width: 100%;
-    margin: 30px 0 0 30px;
+    margin: 30px 0 0 0;
     box-shadow: 0 0 5px grey;
 }
 
@@ -113,7 +110,6 @@
 }
 
 .d-kanan{
-    height: 1000px;
     width: 35%;
     float: right;
     margin: 0 0 0 20px;
@@ -179,4 +175,12 @@
     display: inline-flex;
 }
 
+@media screen and (max-width: 800px) {
+    .d-kiri{
+        width: 100%;
+    }
 
+    .d-kanan{
+        width: 100%;
+    }
+}
