--- a/css/masuk_daftar.css
+++ b/css/masuk_daftar.css
@@ -1,7 +1,8 @@
 
 /* masuk dan daftar*/
 form {
-  margin: 0;
+    min-height: 500px;
+  margin: 100px 0;
   padding: 20px;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.8);
