--- a/css/masuk_daftar.css
+++ b/css/masuk_daftar.css
@@ -2,7 +2,7 @@
 /* masuk dan daftar*/
 form {
     min-height: 500px;
-  margin: 100px 0;
+  margin: 100px 0 15px 0;
   padding: 20px;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.8);
