--- a/css/detail.css
+++ b/css/detail.css
@@ -82,6 +82,7 @@
     background-color: #fff;
     width: 100%;
     margin: 30px 0 0 0px;
+    padding: 10px;
     box-shadow: 0 0 5px grey;
 }
 
@@ -95,20 +96,23 @@
 
 .btn-banyak a{
     text-decoration: none;
-    color: white;
+    font-weight: bold;
+    color: #2095F2;
   }
   
   .btn-banyak{
     width: 100%;
-    background-color: #c5c5c5;
     text-align: center;
   }
   
   .btn-banyak:hover{
-    background-color: #2095F2;
+    
     cursor: pointer;
   }
-
+  .btn-banyak i{
+    color: #2095F2;
+  }
+  
 .c{
     background-color: #fff;
     width: 100%;
