--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 body{
     background-image: url("../img/background.png");
-    min-height: 100%;
+    min-height: 100vh;
 }
 .konten{
   margin : 100px 0 0 0;
