--- a/css/masuk_daftar.css
+++ b/css/masuk_daftar.css
@@ -1,11 +1,17 @@
 
 /* masuk dan daftar*/
 form {
-    min-height: 500px;
+  min-height: 500px;
+  width: 400px;
   margin: 100px 0 15px 0;
   padding: 20px;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+
 }
 form input, form button{
   width: 320px;
