--- a/css/semua.css
+++ b/css/semua.css
@@ -1,91 +1,43 @@
-.atas{
-
-}
-
-.atas-kiri{
-  display: inline-block;
-  text-align: left;
-}
-
-.atas-kanan{
-  display: inline-block;
-  float: right;
-}
-
-.main-kiri{
-  width: 71.5%;
-  /* border: 2px solid black; */
-  float: left;
-  margin: 0;
-  padding: 0px;
-  float: left;
-}
-
-.isi{
+.konten{
   box-sizing: border-box;
   padding: 20px;
-  width: 100%;
   background-color:#fff;
-  /* border: 2px solid blue; */
-  margin-bottom: 40px;
-  /* height: 40%; */
+  margin: 100px 20px 40px 20px;
+  box-shadow: 0 0 5px grey;
 }
 
+.atas{
+  height: 35px;
+  background-color: #a7a7a7;
+  width: 100%;
+  text-align: right;
+}
+
+.atas p{
+  display: inline;
+  margin: 10px 10px;
+}
+
+.atas select{
+  margin: 10px;
+}
 
 .cover1{
-  width: 25%;
-  margin: 10px 10px 10px 0;
-  display: inline-block;
-}
-.column {
+  margin: 10px 20px 10px 20px;
   float: left;
-  width: 25%;
-  padding: 0 10px;
-  height: 300px;
-}
-.row {
-  padding: auto 0;
-  height: 100%;
-  margin: 0;
 }
 
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
-  padding: 16px;
-  text-align: center;
-  background-color: #f1f1f1;
-}
-
-.card a img{
-  width: 100%;
-}
-
-/* sidebar  */
-
-.sidebar{
-  width: 24.5%;
-  /* border: 2px solid blue; */
-  float: right;
-
-}
-
-.kanan1{
-  background-color: #fff;
-  /* border: 2px solid black; */
-  margin-bottom: 40px;
-}
-.is li a {
-  margin: 5px;
-  color: #595959;
-  padding: 0px 0px;
-  text-align: left;
+.cover1 a{
   text-decoration: none;
 }
-.is li a:hover{
-  color: #2095F2;
+
+.judul{
+  color: black;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.episode{
+  color: black;
+  font-size: 16px;
 }
