--- a/css/terbaru.css
+++ b/css/terbaru.css
@@ -1,34 +1,25 @@
-.atas{
-
-}
-
-.atas-kiri{
-  display: inline-block;
-  text-align: left;
-}
-
-.atas-kanan{
-  display: inline-block;
-  float: right;
-}
-
-.main-kiri{
-  width: 71.5%;
-  /* border: 2px solid black; */
-  float: left;
-  margin: 0;
-  padding: 0px;
-  float: left;
-}
-
-.isi{
+.konten{
   box-sizing: border-box;
   padding: 20px;
-  width: 100%;
   background-color:#fff;
-  /* border: 2px solid blue; */
-  margin-bottom: 40px;
-  /* height: 40%; */
+  margin: 100px 20px 40px 20px;
+  box-shadow: 0 0 5px grey;
+}
+
+.atas{
+  height: 35px;
+  background-color: #a7a7a7;
+  width: 100%;
+  text-align: right;
+}
+
+.atas p{
+  display: inline;
+  margin: 10px 10px;
+}
+
+.atas select{
+  margin: 10px;
 }
 
 
@@ -63,29 +54,4 @@
 
 .card a img{
   width: 100%;
-}
-
-/* sidebar  */
-
-.sidebar{
-  width: 24.5%;
-  /* border: 2px solid blue; */
-  float: right;
-
-}
-
-.kanan1{
-  background-color: #fff;
-  /* border: 2px solid black; */
-  margin-bottom: 40px;
-}
-.is li a {
-  margin: 5px;
-  color: #595959;
-  padding: 0px 0px;
-  text-align: left;
-  text-decoration: none;
-}
-.is li a:hover{
-  color: #2095F2;
 }
