--- a/css/semua.css
+++ b/css/semua.css
@@ -1,9 +1,12 @@
 .konten{
-  box-sizing: border-box;
-  padding: 20px;
   background-color:#fff;
   margin: 100px 20px 40px 20px;
   box-shadow: 0 0 5px grey;
+}
+
+.konten h3{
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 .atas{
@@ -20,6 +23,12 @@
 
 .atas select{
   margin: 10px;
+}
+
+.isi{
+  width: 100%;
+  box-sizing: border-box;
+  padding: 20px;
 }
 
 .cover1{
@@ -41,3 +50,22 @@
   color: black;
   font-size: 16px;
 }
+
+.btn-banyak{
+  width: 100%;
+  text-align: center;
+}
+
+  .btn-banyak a{
+    text-decoration: none;
+    font-weight: bold;
+    color: #2095F2;
+  }
+
+  .btn-banyak:hover{
+    cursor: pointer;
+  }
+
+  .btn-banyak i{
+    color: #2095F2;
+  }
