--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,8 @@ nav .kanan >  a{
 .kanan ul{
   position: absolute;
   right: 10px;
-  top: 70px;
+  top: 60px;
+  text-align: left;
 
 }
 nav li input, nav #find input{
@@ -98,9 +99,28 @@ nav #find input{
 }
 
 .kanan > ul > li > a{
-  margin: 10px;
+  text-align: left;
+  margin: 0;
   padding: 0;
 }
+.kanan > ul > li {
+    width: 100%;
+  margin: 5px;;
+  padding: 0;
+}
+.garis{
+  border-bottom: 1px solid grey;
+  margin-bottom: 10px;
+}
+.abu{
+  color: grey;
+  margin-left: 10px;
+  font-size: 14px;
+}
+
+/* {
+  border-bottom: 1px solid grey;
+} */
 
 .icon{
   display: none;
