--- a/css/home-masuk.css
+++ b/css/home-masuk.css
@@ -11,6 +11,67 @@
   font-weight: normal;
   font-size: 20px;
 }
+.kanan > ul > li a{
+  cursor: pointer;
+}
+
+/* modal box */
+
+.modal-konten button{
+  border: none;
+  display: inline-block;
+  text-align: center;
+  margin-top: 15px;;
+  padding: 10px;;
+  border-radius: 4px;
+  background-color: #2196F3;
+  box-shadow: 0 3px 6px #2095F2;
+  color: white;
+}
+
+.modal-konten button:hover{
+  cursor:pointer;
+}
+.tutup{
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 36px;
+  transform: rotate(45deg);
+  cursor: pointer;
+  font-family: sans-serif;
+}
+
+.bg-modal{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  top: 0;
+  z-index: 100;
+  justify-content: center;
+  align-items: center;
+}
+.modal-konten{
+  border-radius: 4px;
+  width: 500px;
+  height: 600px;
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+}
+
+.modal-konten  input, .modal-konten textarea{
+  text-align: center;
+  width: 300px;
+  margin: 10px 0 10px 0;
+  border-radius: 4px;
+}
+.modal-konten  input{
+  height: 40px;
+}
+
 
 /* main */
 .konten{
