--- a/css/home.css
+++ b/css/home.css
@@ -52,6 +52,10 @@
   box-shadow: 0 0 5px grey;
 }
 
+.tengah{
+  width: 100%;
+}
+
 .cover1{
   margin: 10px;
   float: left;
@@ -61,16 +65,24 @@
   text-decoration: none;
 }
 
-.judul{
-  color: black;
-  font-size: 16px;
-  font-weight: 700;
-}
+/* JUDUL , PENGARANG , EPISODE */
 
-.episode{
-  color: black;
-  font-size: 16px;
-}
+    .judul{
+      color: black;
+      font-size: 16px;
+      font-weight: 700;
+    }
+
+    .episode{
+      color: black;
+      font-size: 16px;
+    }
+
+    .pengarang{
+      color: black;
+      font-size: 16px;
+    }
+
 
 .column {
   float: left;
@@ -82,6 +94,10 @@
   padding: auto 0;
   height: 100%;
   margin: 0;
+}
+
+.row a{
+  text-decoration: none;
 }
 
 .row:after {
@@ -154,6 +170,35 @@
   color: #2095F2;
 }
 
+.kanan2{
+  width: 100%;
+}
+
+.kanan2-isi{
+  position: relative;
+  margin: 10px;
+  width: 100%;
+  float: left;
+}
+
+.num{
+  position: relative;
+  top: 0;
+  display: inline-block;
+}
+
+.kanan2-isi a{
+  text-decoration: none;
+}
+
+.kanan2-isi img{
+  display: inline-block;
+}
+
+.lol{
+  margin: 0 0 10px 10px;
+  display: inline-block;
+}
 
 @media screen and (max-width: 800px) {
   .konten{
