--- a/css/semua.css
+++ b/css/semua.css
@@ -52,6 +52,7 @@
 }
 
 .btn-banyak{
+  padding: 10px;
   width: 100%;
   text-align: center;
 }
@@ -63,6 +64,7 @@
   }
 
   .btn-banyak:hover{
+    background-color: #e2e2e2;
     cursor: pointer;
   }
 
