--- a/css/terbaru.css
+++ b/css/terbaru.css
@@ -65,6 +65,7 @@
 }
 
 .btn-banyak{
+  padding: 10px;
   width: 100%;
   text-align: center;
 }
@@ -80,5 +81,6 @@
   }
 
   .btn-banyak:hover{
+    background-color: #e2e2e2;
     cursor: pointer;
   }
