--- a/css/home-masuk.css
+++ b/css/home-masuk.css
@@ -1,10 +1,67 @@
+/* slider */
+.tengah{
+  text-align: center;
+  height: 280px;
+  overflow: hidden;
+  padding-bottom: 20px;
+}
+.kiri_panah, .kanan_panah{
+  position: relative;
+  width: 12px;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+}
+.kiri_panah:hover, .kanan_panah:hover{
+  cursor: pointer;
+}
+.kanan_panah{
+  margin-right: 10px;
+  top: -180px;
+  float: right;
+}
+.kiri_panah{
+  margin-left: 10px;
+  top: -160px;
+  transform: rotate(180deg);
+  display: none;
+}
 
-/* main */
+.tengah > .kiri_panah{
+  position: relative;
+  left: 0;
+  width: 12px;
+  top: 150px;
+  z-index: 2;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  transform: rotate(180deg);
+}
+.cover1{
+  box-sizing: border-box;
+  padding: 10px;
+  display: inline-block;
+  margin: 10px 0px 10px 0px;
+}
+
+.cover1:hover{
+  background-color: #e2e2e2;
+}
+
+.cover1 a{
+  text-decoration: none;
+}
 
 .konten{
   margin: 100px 40px 40px 40px;
   display: block;
   /* border: 2px solid cyan; */
+}
+
+.isi-kanan1{
+  box-sizing: border-box;
+  padding: 10px;
 }
 
 .atas{
@@ -45,8 +102,6 @@
 }
 
 .isi{
-  box-sizing: border-box;
-  padding: 20px;
   /* width: 100%; */
   background-color:#fff;
   /* border: 2px solid blue; */
@@ -54,17 +109,13 @@
   box-shadow: 0 0 5px grey;
 }
 
+.isi2{
+  box-sizing: border-box;
+  padding: 20px;
+}
+
 .tengah{
   width: 100%;
-}
-
-.cover1{
-  margin: 10px;
-  float: left;
-}
-
-.cover1 a{
-  text-decoration: none;
 }
 
 /* JUDUL , PENGARANG , EPISODE */
@@ -98,6 +149,10 @@
   margin: 0;
 }
 
+.row:nth-child(odd){
+  background-color: #e9e9e9;
+}
+
 .row a{
   text-decoration: none;
 }
@@ -124,11 +179,9 @@
 
 .kanan1{
   width: 100%;
-  box-sizing: border-box;
   background-color: #fff;
   /* border: 2px solid black; */
   margin-bottom: 40px;
-  padding: 10px;
   box-shadow: 0 0 5px grey;
 }
 
@@ -160,12 +213,14 @@
 }
 
 .btn-banyak{
+  padding: 5px;
   width: 100%;
   text-align: center;
 }
 
 .btn-banyak:hover{
   cursor: pointer;
+  background-color: #e2e2e2;
 }
 
 .btn-banyak i{
