--- a/css/tentangKami.css
+++ b/css/tentangKami.css
@@ -1,6 +1,8 @@
 .konten{
   background-color: #fff;
   padding: 40px;
+  margin: 100px 40px 40px 40px;
+  min-height: 475px;
 }
 .konten h1{
   text-align: center;
