--- a/css/detail.css
+++ b/css/detail.css
@@ -122,6 +122,7 @@
   }
   
 .c{
+    padding: 10px;
     background-color: #fff;
     width: 100%;
     margin: 30px 0 0 0;
@@ -129,7 +130,7 @@
 }
 
 .c h3{
-    margin: 20px
+    margin: 10px
 }
 
 .cc{
